[project]
name = "customOneButtonPrompt"
description = "One Button Pronmpt has a prompt generation node for beginners who have problems writing a good prompt, or advanced users who want to get inspired. It generates an entire prompt from scratch. It is random, but controlled. You simply load up the script and you press generate, and let it surprise you."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/BenjaMITM/CustomOneButtonPrompt"

[tool.comfy]
PublisherId = "BenjaMITM"
DisplayName = "CustomOneButtonPrompt"
Icon = ""